--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
+    "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@rocketseat/eslint-config": "^2.1.0",
@@ -20,11 +21,14 @@
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-safe-area-context": "^4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "12.3.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "@types/react-native": "~0.69.1",
     "babel-plugin-module-resolver": "^5.0.0",
     "react-native-svg-transformer": "^1.1.0",
     "typescript": "^5.1.3"
