--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,8 @@
     ],
     "rules": {
       "no-unused-vars": "off",
+      "no-useless-catch": "off",
+      "camelcase": "off",
       "@typescript-eslint/no-unused-vars": [
           "error",
           { "argsIgnorePattern": "^_" }
