--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@types/react-native": "~0.69.1",
+    "axios": "^1.5.1",
     "babel-plugin-module-resolver": "^5.0.0",
     "react-native-svg-transformer": "^1.1.0",
     "typescript": "^5.1.3"
